--- a/app/src/main/res/layout/item_detail.xml
+++ b/app/src/main/res/layout/item_detail.xml
@@ -26,6 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="250dp"/>
     <LinearLayout
+        android:layout_marginLeft="8dp"
         android:layout_width="match_parent"
         android:layout_height="50dp">
         <ImageView
@@ -45,6 +46,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:id="@+id/detailviewitem_explain_textview"
         android:text="Explain_content"
         android:layout_width="wrap_content"
